syntax = "proto3";
package seiprotocol.seichain.evm;

import "gogoproto/gogo.proto";
import "evm/config.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/evm/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  string base_denom = 1 [
    (gogoproto.moretags)   = "yaml:\"base_denom\"",
    (gogoproto.jsontag) = "base_denom"
  ];
  string priority_normalizer = 2 [
      (gogoproto.moretags)   = "yaml:\"priority_normalizer\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "priority_normalizer"
  ];
  string base_fee_per_gas = 3 [
    (gogoproto.moretags)   = "yaml:\"base_fee_per_gas\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false,
    (gogoproto.jsontag) = "base_fee_per_gas"
];
string minimum_fee_per_gas = 4 [
  (gogoproto.moretags)   = "yaml:\"minimum_fee_per_gas\"",
  (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
  (gogoproto.nullable)   = false,
  (gogoproto.jsontag) = "minimum_fee_per_gas"
];
  ChainConfig chain_config = 5 [(gogoproto.moretags) = "yaml:\"chain_config\"", (gogoproto.nullable) = false];
}